# schemacheck

./: README.md  pyproject.toml
src/schemacheck/: __init__.py  cli.py  json_schema.py  loaders.py  schema.py  validate.py
tests/: test_cli.py  test_json_schema.py  test_schema.py  test_validate.py
