[project]
name = "schemacheck"
version = "0.0.0"
description = "Scaffolded by keelen."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6"]

[project.scripts]
schemacheck = "schemacheck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schemacheck"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
